@@ -81,7 +81,6 @@
                                 <term><varname>systemd.dump_core=</varname></term>
                                 <term><varname>systemd.crash_shell=</varname></term>
                                 <term><varname>systemd.crash_chvt=</varname></term>
-                                <term><varname>systemd.confirm_spawn=</varname></term>
                                 <term><varname>systemd.show_status=</varname></term>
                                 <term><varname>systemd.log_target=</varname></term>
                                 <term><varname>systemd.log_level=</varname></term>
